--- a/.gitignore
+++ b/.gitignore
@@ -39,10 +39,12 @@ project.xcworkspace
 .settings
 local.properties
 android.iml
+*.hprof
 
 # Cocoapods
 #
 example/ios/Pods
+example/vendor
 
 # node.js
 #
