update repository to The New Architecture

--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -28,7 +28,7 @@ target 'StlApiExample' do
   flags = get_default_flags()
 
   use_react_native!(
-    :path => config["reactNativePath"],
+    :path => config[:reactNativePath],
     # Hermes is now enabled by default. Disable by setting this flag to false.
     # Upcoming versions of React Native may rely on get_default_flags(), but
     # we make it explicit here to aid in the React Native upgrade process.
@@ -42,8 +42,6 @@ target 'StlApiExample' do
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
-
-  pod 'react-native-stl-api', :path => '../..'
 
   post_install do |installer|
     react_native_post_install(
