--- a/example/package.json
+++ b/example/package.json
@@ -10,18 +10,18 @@
     "pods": "RCT_NEW_ARCH_ENABLED=1 pod-install --quiet"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.5.3",
-    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
     "react": "18.2.0",
     "react-native": "0.71.4",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "metro-react-native-babel-preset": "0.73.8",
-    "babel-plugin-module-resolver": "^4.1.0"
+    "babel-plugin-module-resolver": "^4.1.0",
+    "metro-react-native-babel-preset": "0.73.8"
   }
 }
