--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "js-base64": "^3.7.5",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-safe-area-context": "^4.5.0",
